# clapchop

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bump-version.yml  release-bundle.yml
src/: lib.rs  preset.rs  sample.rs  slicing.rs  ui.rs
xtask/: Cargo.toml
