[workspace]
members = ["xtask"]

 [package]
 name = "clapchop"
 version = "1.0.0"
 authors = ["jesse keane <me@jessekeane.me>"]
 edition = "2021"
 description = "ergonomic sample chopper"
 license = "MIT"

 [lib]
 crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master", package = "nih_plug_egui" }
 egui = "0.26"
 parking_lot = "0.12"
 hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
rfd = "0.14"
crossbeam-utils = { version = "0.8", default-features = false, features = ["std"] }

[dev-dependencies]
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug", branch = "master" }

 [profile.release]
 lto = "fat"
 codegen-units = 1
 opt-level = 3

 [package.metadata.nih-plug]
 # Generate CLAP and other bundles on build
 bundle_target = ["clap"]

 [package.metadata.nih-plug.clap]
 vendor = "grimoire.supply"
 name = "clapchop"
 url = "https://github.com/jarofghosts/clapchop"
 manual_url = "https://github.com/jarofghosts/clapchop"
 support_url = "https://github.com/jarofghosts/clapchop"
 version = "1.0.0"
 description = "ergonomic sample chopper"
